--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -39,14 +39,16 @@ This dataset contains records for all offenders in Broward County, Florida
 in 2013 and 2014 who were given a COMPAS score pre-trial.
 Recidivism is defined as committing a crime within two years of the COMPAS
 assessment.
-This dataset contains records for 7,214 individuals, of which we had complete data for 6,907.
 %
-For the majority of our analysis, we extract a set of~13 binary features (Feature set~A),
+From the original dataset of records for 7,214 individuals,
+we identify a subset of 6,907 records without missing data.
+%
+For the majority of our analysis, we extract a set of~13 binary features (Feature Set~A),
 which our antecedent mining framework combines into ${M=122}$ antecedents,
 on average (folds ranged from containing 121 to 123 antecedents).
 %
 We also consider a second, similar antecedent set in~\S\ref{sec:examples},
-derived from a superset of Feature set~A that includes~4 additional binary features (Feature set~B).
+derived from a superset of Feature set~A that includes~4 additional binary features (Feature Set~B).
 
 \textbf{NYCLU stop-and-frisk dataset.} For our second problem, we use
 the NYCLU 2014 stop-and-frisk dataset~\citep{nyclu:2014} to predict
@@ -69,7 +71,7 @@ see Appendix~\ref{appendix:data}.
 %
 Our choice of, and approach to, the weapon prediction problem is inspired by the work
 of~\citet{Goel16}, who develop regression models to analyze racial disparities
-in New York City's stop-and-frisk policy for a similar, but larger, dataset.
+in New York City's stop-and-frisk policy for a related, larger dataset.
 %
 In particular, the authors arrive at a simple and interpretable heuristic that
 could potentially help police officers more effectively decide when to
@@ -79,8 +81,9 @@ interventions are likely to discover criminal possession of a weapon.
 \subsection{Example optimal rule lists}
 \label{sec:examples}
 
-To motivate the feature set we used in most of our analysis of the ProPublica dataset,
-described in Appendix~\ref{appendix:data}, we first consider a slightly different feature set.
+To motivate Feature Set~A, described in Appendix~\ref{appendix:data},
+which we used in most of our analysis of the ProPublica dataset,
+we first consider Feature Set~B, a larger superset of features.
 
 %
 \begin{figure}[t!]
@@ -90,7 +93,7 @@ described in Appendix~\ref{appendix:data}, we first consider a slightly differen
 \State \belif $(priors > 3)$ \bthen $yes$
 \State \belse $no$
 \end{algorithmic}
-\vspace{1mm}
+\vspace{2mm}
 \begin{algorithmic}
 \State \bif $(age = 23-25) \band (priors = 2-3)$ \bthen $yes$
 \State \belif $(age = 18-20)\band (sex = male)$ \bthen $yes$
@@ -99,71 +102,48 @@ described in Appendix~\ref{appendix:data}, we first consider a slightly differen
 \State \belse $no$
 \end{algorithmic}
 \caption{Two representative optimal rule lists that predict two-year recidivism for the
-ProPublica dataset (M=189), found by CORELS (${\Reg = 0.005}$), across 10 cross-validation folds.
+ProPublica dataset (Feature Set~B, ${M=189}$), found by CORELS (${\Reg = 0.005}$), across 10 cross-validation folds.
 %
-This set of rules included race features, though no optimal rule lists included a rule containing race.
+While some of the input antecedents contained race features, no optimal rule list includes such an antecedent.
 %
-Since race did not appear in any optimal rule list, we omit race features from all subsequent analysis of this dataset.
+%Since race did not appear in any optimal rule list, we omit race features from all subsequent analysis of this dataset.
 %
-The remaining 8 optimal rule lists were the same or similar to these two lists, with prefixes containing the same rules, up to a permutation,
+The remaining eight optimal rule lists were the same or similar to these two examples, with prefixes containing the same rules, up to a permutation,
 and the same default rules.
 }
 \label{fig:propublica}
 \end{figure}
 %
-\begin{figure}[hb!]
-\vspace{1mm}
+\begin{figure}[ht!]
+\vspace{3mm}
 \begin{algorithmic}
 \State \bif $(age = 18-20)\band (sex = male)$ \bthen $yes$
 \State \belif $(age = 21-22) \band (priors = 2-3)$ \bthen $yes$
 \State \belif $(priors > 3)$ \bthen $yes$
 \State \belse $no$
 \end{algorithmic}
-\vspace{1mm}
+\vspace{2mm}
 \begin{algorithmic}
-\State \bif $(age = 21-22) \band (priors = 2-3)$ \bthen $yes$
 \State \bif $(age = 23-25) \band (priors = 2-3)$ \bthen $yes$
 \State \belif $(priors > 3)$ \bthen $yes$
 \State \belif $(sex = male) \band (age = 18-20)$ \bthen $yes$
 \State \belse $no$
 \end{algorithmic}
 \caption{Example optimal rule lists that predict two-year recidivism for the
-ProPublica dataset (M=122), found by CORELS, across 10 cross-validation folds.
+ProPublica dataset (Feature Set~A, ${M=122}$), found by CORELS (${\Reg = 0.005}$), across 10 cross-validation folds.
 %
-The rules used to generate these rule lists mined are similar to the ones used to generate Fig. \label{fig:propublica} above, except that this set of rules did not contain any race features.
+Feature Set~A is a subset of Feature Set~B (Figure~\ref{fig:propublica}) that excludes race features.
 %
-We observe that while these rule lists are not identical to the ones found in the earlier dataset, they contain
-the same rules as the dataset that included race features.
+The optimal rule lists found using Feature Sets~A and~B contain the same rules.
 %
-The first rule list was found by 4 folds, while the rule lists found by other folds contained the same rules as these two lists, though the prefix order was permuted.
-%
-Additionally, all of these rule lists start with the same rule,
-end with the same default rule, and contain the same prefix rules, up to a permutation;
-the prefix rules always predict the positive class label,
-and the default rule always predicts the negative class label.
-%
-Thus, these rule lists could be equivalently expressed as a DNF rule.
-%
-Note that our objective is not designed to enforce any of these properties,
-though some may be seen as desirable.
+The upper rule list was found by four folds; the remaining six contained the same rules;
+all contain the same prefix rules, up to a permutation, and end with the same default rule.
 }
 \label{fig:recidivism-all-folds}
 \end{figure}
 %
-Figure~\ref{fig:propublica} shows optimal rule lists learned by CORELS,
-using a feature set that includes the race categories from the ProPublica dataset (African American, Caucasian, Hispanic,
-Other\footnote{We grouped together the original Native American ($<$0.003), Asian ($<$0.005), and Other ($<$0.06) categories.}).
-%
-For this feature set, our antecedent mining procedure generated an average
-of~189 antecedents, across folds.
-%
-Notice that none of these rule lists contain antecedents that directly depend on race;
-this motivated our choice to exclude race in our subsequent analysis.
-%
-For both versions of the dataset, we chose a set of age ranges that was fine-grained
-for younger individuals (18-20, 21-22, 23-25, 26-45, $>$45), as opposed to the original ProPublica categories of ($<$25, 25-45, $>$45).
-
-\begin{figure}[t!]
+\begin{figure}[ht!]
+\vspace{3mm}
 \begin{algorithmic}
 \State \bif $(location = transit~authority)$ \bthen $yes$
 \State \belif $(stop~reason = suspicious~object)$ \bthen $yes$
@@ -179,24 +159,47 @@ folds; the others contain the same rules, up to a permutation.
 \label{fig:weapon-rule-list}
 \end{figure}
 
+Figure~\ref{fig:propublica} shows optimal rule lists learned by CORELS,
+using Feature Set~B, which additionally includes race categories from the ProPublica dataset (African American, Caucasian, Hispanic,
+Other\footnote{We grouped the original Native American ($<$0.003), Asian ($<$0.005), and Other ($<$0.06) categories.}).
+%
+For Feature Set~B, our antecedent mining procedure generated an average
+of~189 antecedents, across folds.
+%
+None of the optimal rule lists contain antecedents that directly depend on race;
+this motivated our choice to exclude race, by using Feature Set~A, in our subsequent analysis.
+%
+For both feature sets, we replaced the original ProPublica age categories ($<$25, 25-45, $>$45)
+with a set that is more fine-grained for younger individuals (18-20, 21-22, 23-25, 26-45, $>$45).
+%
 Figures~\ref{fig:recidivism-all-folds} and~\ref{fig:weapon-rule-list}
 show example optimal rule lists that CORELS learns
-for the ProPublica (${\Reg = 0.005}$) and NYCLU (${\Reg = 0.01}$) datasets, respectively,
-using 10-fold cross validation and the antecedent sets described
-at the beginning of~\S\ref{sec:experiments}.
+for the ProPublica (Feature Set~A, ${\Reg = 0.005}$) and NYCLU (${\Reg = 0.01}$) datasets, respectively,
+using 10-fold cross validation.
 
 While our goal is to provide illustrative examples, and not to provide a
 detailed analysis nor to advocate for the use of these specific models,
 we note that these rule lists are short and easy to understand.
 %
-Furthermore, as we demonstrate in~\S\ref{sec:sparsity},
-optimal rule lists learned by CORELS achieve accuracies that are competitive
-with a suite of other models, including black box COMPAS scores.
+For the examples and regularization parameter choices in this section,
+the optimal rule lists are robust across cross-validation folds:
+the rules are the same, up to a permutation of the prefix rules.
+%
+Also, the prefix rules always predict the positive class label
+and the default rule always predicts the negative class label;
+thus, each of these rule lists could be equivalently expressed as a DNF rule.
+%
+Our objective is not designed to enforce any of these properties,
+though some may be seen as desirable.
 %
 We also note that the three-rule list for weapon prediction
 in Figure~\ref{fig:weapon-rule-list} has the spirit of the heuristic
 strategy presented by~\citet{Goel16} that combines three stop criteria
 and is based on a reduced version of their full regression model.
+%
+As we demonstrate in~\S\ref{sec:sparsity},
+optimal rule lists learned by CORELS achieve accuracies that are competitive
+with a suite of other models, including black box COMPAS scores.
 %
 See Appendix~\ref{appendix:examples} for additional listings of optimal rule lists found
 by CORELS, for each of our prediction problems, across cross-validation folds,
