Edits to computational environment with Nicholas

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -21,11 +21,12 @@ and then show example optimal rule lists found by CORELS (\S\ref{sec:examples}).
 
 \textbf{Computational environment.}
 %\label{sec:environment}
-All timed results ran on a server with a Intel Xeon E5-2699~v4 (56~MB cache, 2.20GHz) processor and 251~GB RAM.
+All timed results ran on a server with an Intel Xeon E5-2699~v4 (55~MB cache, 2.20~GHz) processor and 264~GB RAM,
+and we ran each timing measurement separately, on a single hardware thread, with nothing else running on the server.
 %with two Intel Xeon E5-2699~v4 (55~MB cache, 2.20~GHz) processors and 756~GB RAM.
 %
 Except where we mention a memory constraint, all experiments
-can run comfortably on smaller machines, \eg a laptop with 16GB~RAM.
+can run comfortably on smaller machines, \eg a laptop with 16~GB~RAM.
 
 %\textbf{Datasets and prediction problems.}
 %\label{sec:datasets}
