Syntax edit. TODO: revisit Fig 7

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -297,7 +297,7 @@ Top:  Two-year recidivism prediction for the ProPublica COMPAS dataset.
 %
 %For CORELS and SBRL, the number of antecedents~$M$ is between 155 and 157.
 %
-None of the models exhibit significant overfitting --
+None of the models exhibit significant overfitting;
 mean training accuracy never exceeds mean test accuracy
 by more than about 0.01.
 %
