--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -374,14 +374,16 @@ Further, our experiments indicate that the proprietary survey data required to c
 \begin{figure}[t!]
 % left lower right upper
 \begin{center}
-\includegraphics[trim={12mm, 0mm, 24mm, 0mm},
+\includegraphics[trim={10mm, 0mm, 10mm, 0mm},
 width=0.93\textwidth]{figs/compas-corels-comparison.pdf}
 \end{center}
-\caption{TPR and FPR of CORELS and COMPAS on the different races in our dataset across the 10 folds.
+\caption{Comparison of TPR and FPR (left), as well as TNR and FNR (right),
+for different races in the ProPublica dataset, for CORELS and COMPAS,
+across 10 cross-validation folds.
 %
-CORELS has a lower FPR on black individuals in the dataset than COMPAS, though it also has a slightly lower TPR.
+%CORELS has a lower FPR for black individuals in the dataset than COMPAS, as well as a lower TPR.
 %
-Both CORELS and COMPAS have a significantly higher FPR rate for black indviduals than white individuals--despite CORELS producing optimal rule lists without explicit race features.
+%Both CORELS and COMPAS have a significantly higher FPR rate for black indviduals than white individuals--despite CORELS producing optimal rule lists without explicit race features.
 %
 }
 \label{fig:tpr-fpr}
