Minor edits Table 3

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -716,7 +716,7 @@ CORELS & 1.1 (.1) & --- & 8.9 (.1) & 11 \\
 No priority queue (BFS) & 2.2 (.2) & 2.0$\times$ & 110 (10) & 11 \\
 No support bounds & 1.2 (.1) & 1.1$\times$ & 8.8 (.8) & 11 \\
 No lookahead bound & 1.7 (.2) & 1.6$\times$ & 7.3 (1.8) & 11-12 \\
-No symmetry-aware map & $>$ 73 (5.4) & $>$ 68$\times$ & $>$ 7.6 (.4) & $>$ 10 \\
+No symmetry-aware map & $>$ 73 (5) & $>$ 68$\times$ & $>$ 7.6 (.4) & $>$ 10 \\
 No equivalent points bound & 4 (.3) & 3.8$\times$ & 6.4 (.9) & 14 \\
 \hline
 \end{tabular}
@@ -725,9 +725,9 @@ No equivalent points bound & 4 (.3) & 3.8$\times$ & 6.4 (.9) & 14 \\
  & Lower bound & Total queue &  Max queue \\
 Algorithm variant & evaluations ($\times 10^6$) & insertions ($\times 10^5$) &~ size ($\times 10^5$) \\
 \hline
-CORELS & 7.0 (.7) & 2.0 (.2) & 1.3 (.1) \\
+CORELS & 7 (1) & 2.0 (.2) & 1.3 (.1) \\
 No priority queue (BFS) & 14 (1) & 4.1 (.4) & 1.4 (.1) \\
-No support bounds & 7.9 (.8) & 2.1 (.2) & 1.3 (.1) \\
+No support bounds & 8 (1) & 2.1 (.2) & 1.3 (.1) \\
 No lookahead bound & 11 (1) & 3.2 (.3) & 2.1 (.2) \\
 No symmetry-aware map & $>$ 390 (40) & $>$ 1000 (0) & $>$ 900 (10) \\
 No equivalent points bound & 33 (2) & 9.4 (.7) & 6.0 (.4) \\
