Minor edit in conclusion

--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -12,7 +12,7 @@ via a suite of bounds.
 This makes realistically sized problems tractable.
 %
 CORELS is amenable to parallelization, which should allow it to scale to
-even larger problems.
+even larger problems than those we presented here.
 
 \begin{arxiv}
 Finally, we would like to clarify some limitations of CORELS.
