--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -80,7 +80,7 @@ J.~Schleier-Smith and E.~Thewalt for helpful conversations, and members of RISEL
 SAIL, and the UC Berkeley Database Group for their support and feedback.
 %
 We thank H.~Yang and B.~Letham for sharing advice and code for processing data
-and mining rules.
+and mining rules, as well as V.~Kaxiras and A.~Saligrama for their recent contributions to our implementation.
 }
 
 \vskip 0.2in
